<resources>
    <string name="app_name">KhabeerTask</string>
    <string name="hello">Hello World!</string>
    <string name="login_fragment">Login</string>
    <string name="payroll_fragment">Payroll</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="mobile_error">Mobile Number is not correct</string>
    <string name="password_error">Password must be more than 5 characters</string>
    <string name="api_error">Error in login, This User Not Exist</string>
    <string name="total_salary">"Total Salary : "</string>
    <string name="claiming">Claiming</string>
    <string name="deduction">Deduction</string>
    <string name="net_salary">Total</string>
    <string name="index">index</string>
    <string name="term">Term</string>
    <string name="value">Value</string>
    <string name="logout">Logout</string>
</resources>